fetcher: always create a downloader thread

It can be finally used by local fetchers.

Regression from ed25f895756e8d1bca1c2327db82e71d6b046f08

 #0  0x00007f49abda59c9 in vlc_mutex_trylock (mtx=mtx@entry=0x0) at misc/threads.c:122
 #1  0x00007f49abda5a1c in vlc_mutex_lock (mtx=mtx@entry=0x0) at misc/threads.c:103
 #2  0x00007f49abd9c3b1 in vlc_executor_Submit (executor=0x0, runnable=runnable@entry=0x7f498800fd28) at misc/executor.c:212
 #3  0x00007f49abd27de7 in Submit (fetcher=0x55a9fc371820, executor=<optimized out>, item=0x55a9fc41c0a0, options=META_REQUEST_OPTION_FETCH_LOCAL, cbs=0x7f49abe0c2b8 <input_fetcher_callbacks>, userdata=0x55a9fc40ac60) at preparser/fetcher.c:142
 #4  0x00007f49abd28ab0 in SearchByScope (task=task@entry=0x7f498c004b30, scope=scope@entry=1) at preparser/fetcher.c:287
 #5  0x00007f49abd28c7f in RunSearchLocal (userdata=0x7f498c004b30) at preparser/fetcher.c:383
 #6  0x00007f49abd9c296 in ThreadRun (userdata=0x55a9fc3fd8e0) at misc/executor.c:134
 #7  0x00007f49abaa760c in start_thread (arg=<optimized out>) at pthread_create.c:444
 #8  0x00007f49abb2eaa8 in clone3 () at ../sysdeps/unix/sysv/linux/x86_64/clone3.S:78

Fixes #28832